# graphrag-assistant-v1

./: .gitignore  .saturnday-policy.yaml  LICENSE  README.md  docker-compose.test.yml  pyproject.toml
app/: dependencies.py  lifespan.py  main.py
app/benchmark/: loader.py  router.py  runner.py  scoring.py  store.py
app/ingest/: contract_ids.py  pipeline.py
app/ingestion/: chunk_splitter.py
app/log_config/: structured_logger.py
app/pipelines/: citation_generator.py  constrained_retrieval.py  entity_resolver.py  graph_rag.py  graph_traversal.py  plain_rag.py
app/retrieval/: constrained_retriever.py  cypher_templates.py  graph_traverser_types.py  retrieval_resolver.py
app/routers/: entities.py  graph_rag_router.py  health.py  ingest.py  plain_rag_router.py  query.py  seed.py
app/schemas/: query_schemas.py
data/expected/: benchmark_answers.jsonl
data/processed/: benchmark_queries.jsonl  chunks.jsonl
data/raw/: addresses.csv  companies.csv  contract_clauses.csv  contracts.csv  directorships.csv  people.csv  products.csv  supplies.csv
graphrag_assistant/: config.py  schemas.py
graphrag_assistant/graph/: neo4j_client.py
graphrag_assistant/ingestion/: clause_parser.py
graphrag_assistant/loaders/: chunk_edge_writer.py  chunk_loader.py  chunk_node_writer.py  chunk_reader.py  chunk_related_writer.py  contract_loader.py  entity_loader.py  relationship_loader.py
graphrag_assistant/providers/: base.py  embedding.py  (+2 more)
tests/: test_dependencies.py  test_graph_rag_router.py  test_lifespan.py  test_main.py  test_plain_rag_router.py  test_query_schemas.py
(+59 files in other folders)
