[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag-assistant"
version = "0.1.0"
description = "GraphRAG assistant for relationship-heavy enterprise queries over procurement and contract data"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "neo4j>=5.0",
    "pydantic>=2.0",
    "sentence-transformers>=3.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.15",
    "pandas>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["graphrag_assistant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: marks tests that require a live Neo4j instance (deselect with -m 'not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
